Bug fixed on close zoom (race condition over a flag), some improvements. Now if a thumbnail image has longdesc attribute, its zoom image is wrapped on a link element with same href attribute

--- a/mosaiqy.css
+++ b/mosaiqy.css
@@ -103,6 +103,7 @@
             width           : 100%;
             height          : 100%;
         }
+        
 
     .mosaiqy .mosaiqy-zoom-image {
         display         : none;
@@ -152,6 +153,27 @@
     height              : 119px;
     width               : 184px;
 }
+
+.mosaiqy li.zoom figcaption {
+    border          : 3px solid #adbecb;
+    height          : 113px;
+    width           : 178px;
+    cursor          : default;
+}
+
+    .mosaiqy li.mosaiqy-zoom figcaption {
+        position        : absolute;
+        z-index         : 2;
+        top             : auto;
+        bottom          : 0;
+        padding         : 1em 0;
+        height          : auto;
+        text-indent     : 12px;
+        display         : block;
+        width           : 100%;
+        vertical-align  : middle;
+        cursor          : default;
+    }
 
 
 .mosaiqy {
